# bazel_shlib

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl
lib/: BUILD.bazel  arrays.sh  assertions.sh  files.sh  messages.sh  paths.sh
rules/: BUILD.bazel  execute_binary.bzl  execute_binary.sh
tests/: BUILD.bazel  messages_test.sh
tests/arrays_tests/: BUILD.bazel  contains_item_sorted_test.sh  contains_item_test.sh  join_by_test.sh  print_by_line_test.sh  sort_items_test.sh
tests/execute_binary_tests/: BUILD.bazel  execute_binary_no_args_test.sh  execute_binary_with_args_test.sh  my_bin.sh
tests/files_tests/: BUILD.bazel  upsearch_test.sh
tests/messages_tests/: BUILD.bazel  exit_with_msg_test.sh
tests/paths_tests/: BUILD.bazel  normalize_path_test.sh
tools/: BUILD.bazel  contains_item_perf_comparison.sh
