load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_binary(
    name = "contains_item_perf_comparison",
    srcs = ["contains_item_perf_comparison.sh"],
    deps = [
        "//lib:arrays",
        "@bazel_tools//tools/bash/runfiles",
    ],
)
