load("@cgrindel_rules_bzlformat//bzlformat:bzlformat.bzl", "bzlformat_pkg")

bzlformat_pkg(name = "bzlformat")

sh_test(
    name = "upsearch_test",
    srcs = ["upsearch_test.sh"],
    deps = [
        "//lib:files",
        "@bazel_tools//tools/bash/runfiles",
        "@cgrindel_bazel_shlib//lib:assertions",
    ],
)
